<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="200dp"
    android:minHeight="300dp"
    android:layoutDirection="ltr"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/sort_by"
        android:textSize="20sp"
        android:textStyle="bold"></TextView>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descending">

    </CheckBox>
    <RadioGroup android:orientation="vertical"
        android:id="@+id/sorting_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <RadioButton android:id="@+id/sort_by_name"
            android:paddingLeft="16.0dip"
            android:paddingTop="8.0dip"
            android:paddingRight="16.0dip"
            android:paddingBottom="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />
        <RadioButton android:id="@+id/sort_by_size"
            android:paddingLeft="16.0dip"
            android:paddingTop="8.0dip"
            android:paddingRight="16.0dip"
            android:paddingBottom="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size" />
        <RadioButton android:id="@+id/sort_by_date"
            android:paddingLeft="16.0dip"
            android:paddingTop="8.0dip"
            android:paddingRight="16.0dip"
            android:paddingBottom="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"></Button>


        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"></Button>

    </LinearLayout>
</LinearLayout>